--- a/src/index.css
+++ b/src/index.css
@@ -14,12 +14,31 @@ code {
     monospace;
 }
 
+.bowtie {
+  width: 50%;
+}
+
+.redir{
+  display:flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
 .home.container-fluid {
   margin-top: 2em;
 }
 
+.contact.home.container-fluid{
+  margin-top: 4em;
+}
+
+.row {
+  padding-top: .5em;
+}
+
 .slider {
-  width: 15vw;
+  width: 33vh;
 }
 
 .slider div{
@@ -27,6 +46,10 @@ code {
   align-items: center;
   justify-content: center;
   margin: 5px;
+}
+
+.slider div.slick-slide {
+  padding-top: 5px;
 }
 
 .slider div img{
@@ -57,6 +80,27 @@ code {
   align-items: center;
 }
 
+.about {
+  font-size: 2vh;
+  color:black;
+  text-align: center;
+  max-width: 75%;
+}
+
+.row.contact {
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.contact-logo {
+  max-width: 20vh;
+}
+
+.map {
+  max-width: 25%;
+}
+
 @media only screen and (min-width: 768px) {
   /*when not on mobile, add some space*/
   .col-md-3.lft{
@@ -66,10 +110,21 @@ code {
   .col-md-3.rit{
     padding-right: 5em;
   }
+
+  .about {
+    max-width: 60%;
+  }
 }
 
 .link {
   color: #FF0000;
+  font-weight: bold;
+}
+
+.visit {
+  margin-top: 1em;
+  margin-bottom: 1em;
+  max-width: 60%;
   font-weight: bold;
 }
 
@@ -85,3 +140,4 @@ code {
 .link:hover {
   color: rgb(133, 9, 9);
 }
+
